--- a/ImageCompareMap/App.xaml
+++ b/ImageCompareMap/App.xaml
@@ -2,15 +2,13 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:MapComparer"
-    
-             StartupUri="view\MainWindow.xaml"
-             
+             StartupUri="Interface\View\MainWindow.xaml"
              >
-    
-            <!--StartupUri="view\MainWindow.xaml">-->
-            <!--StartupUri="view\Window1.xaml">-->
-
     <Application.Resources>
-
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="Styles/AppStyles.xaml"/>
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
     </Application.Resources>
 </Application>
