--- a/ImageCompareMap/Interface/View/Dialogs/ScanDIalog.xaml
+++ b/ImageCompareMap/Interface/View/Dialogs/ScanDIalog.xaml
@@ -1,9 +1,12 @@
-﻿<Window x:Class="MapComparer.Interface.ScanDIalog"
+﻿<Window x:Class="MapComparer.Interface.ScanDialog"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:MapComparer.Interface" mc:Ignorable="d"
+        xmlns:local="clr-namespace:MapComparer.Interface" mc:Ignorable="d" xmlns:viewmodel="clr-namespace:MapComparer.Viewmodel"
         Title="ScanDialog" Height="300" Width="800" WindowStartupLocation="CenterOwner"
         >
+    <Window.DataContext>
+        <viewmodel:ScanSetupViewModel/>
+    </Window.DataContext>
     <DockPanel>
         <Grid DockPanel.Dock="Bottom">
             <Button Content="Scan textures" HorizontalAlignment="Right" 
