--- a/ImageCompareMap/Interface/View/Pages/StartPage.xaml
+++ b/ImageCompareMap/Interface/View/Pages/StartPage.xaml
@@ -1,18 +1,31 @@
 ﻿<Page x:Class="MapComparer.Interface.StartPage"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-      xmlns:local="clr-namespace:MapComparer.Interface" mc:Ignorable="d" d:DesignHeight="450" d:DesignWidth="800"
-      Title="StartPage" Background="#aaa"
+      xmlns:local="clr-namespace:MapComparer.Interface" mc:Ignorable="d" d:DesignHeight="450" d:DesignWidth="800" 
+      xmlns:viewmodel="clr-namespace:MapComparer.Viewmodel" Title="StartPage" Background="#aaa"
       >
+    <Page.DataContext>
+        <viewmodel:StartPageViewModel/>
+    </Page.DataContext>
+    <Page.InputBindings>
+        <KeyBinding Command="{Binding ScanTextures}" Key="S" Modifiers="Alt"/>
+        <!--<KeyBinding Command="{Binding PrevTexture}"  Key="W"/>
+        <KeyBinding Command="{Binding NextTexture}"  Key="S"/>
+        <KeyBinding Command="{Binding PrevMatch}"    Key="A"/>
+        <KeyBinding Command="{Binding NextMatch}"    Key="D"/>
+        <KeyBinding Command="{Binding UnsetMatch}"   Key="Backspace"/>
+        <KeyBinding Command="{Binding SetMatch}"     Key="Enter"/>
+        <KeyBinding Command="{Binding RemSelected}"  Key="Delete"/>-->
+    </Page.InputBindings>
     <DockPanel>
         <Grid DockPanel.Dock="Top" Background="#bbb">
             <Menu HorizontalAlignment="Left" Background="Transparent">
                 <MenuItem Header="File">
-                    <MenuItem Header="Scan textures"    Command="{Binding ScanTextures}"/>
-                    <MenuItem Header="Exit"             Command="{Binding Exit}"/>
+                    <MenuItem Header="Scan textures" Command="{Binding ScanTextures}"/>
+                    <MenuItem Header="Exit" Command="{Binding Exit}"/>
                 </MenuItem>
                 <MenuItem Header="Help">
-                    <MenuItem Header="About"            Command="{Binding AboutApp}"/>
+                    <MenuItem Header="About" Command="{Binding AboutApp}"/>
                 </MenuItem>
             </Menu>
         </Grid>
