--- a/ImageCompareMap/Interface/View/Pages/ComparisonPage.xaml
+++ b/ImageCompareMap/Interface/View/Pages/ComparisonPage.xaml
@@ -2,7 +2,7 @@
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:MapComparer.Interface" mc:Ignorable="d" d:DesignHeight="450" d:DesignWidth="800" 
-      xmlns:viewmodel="clr-namespace:MapComparer.Viewmodel" Title="ComparisonPage" Background="#aaa"
+      xmlns:viewmodel="clr-namespace:MapComparer.Viewmodel" Title="ComparisonPage" Background="LightGray"
       >
     
     <!-- Only for intelisense. Remove in release. -->
@@ -17,11 +17,16 @@
                     CommandParameter="{Binding ElementName=lbTextures}"/>
         <KeyBinding Command="{Binding SelectPrevImage}"      Key="A"
                     CommandParameter="{Binding ElementName=lbTextures}"/>
+        
+        <KeyBinding Command="{Binding SelectPrevSimilarImage}"      Key="S"
+                    CommandParameter="{Binding ElementName=lbSimilarTextures}"/>
+        <KeyBinding Command="{Binding SelectNextSimilarImage}"      Key="W"
+                    CommandParameter="{Binding ElementName=lbSimilarTextures}"/>
     </Page.InputBindings>
     
     <DockPanel>
-        <Grid DockPanel.Dock="Top" Background="#bbb">
-            <Menu HorizontalAlignment="Left" Background="Transparent">
+        <Grid DockPanel.Dock="Top" >
+            <Menu HorizontalAlignment="Left" >
                 <MenuItem Header="File">
                     <MenuItem Header="Scan textures"                Command="{Binding ScanTextures}"/>
                     <MenuItem Header="Export texture match list"    Command="{Binding ExportTexList}"/>
@@ -37,19 +42,19 @@
                 </MenuItem>
             </Menu>
         </Grid>
-        <Grid DockPanel.Dock="Bottom" Background="#bbb">
-            <Menu HorizontalAlignment="Left" Background="Transparent">
+        <Grid DockPanel.Dock="Bottom" >
+            <Menu HorizontalAlignment="Left" >
                 <MenuItem Header="Options"/>
             </Menu>
             <Label Name="lblStatus" Content="status" Padding="0" HorizontalAlignment="Center"/>
         </Grid>
 
-        <DockPanel DockPanel.Dock="Right" Background="#bbb" MaxWidth="200">
+        <DockPanel DockPanel.Dock="Right" MaxWidth="200">
             <StackPanel DockPanel.Dock="Bottom" Orientation="Horizontal">
                 <Button Content="Set as best match" 
                         Command="{Binding ElementName=lbTextures, Path=SelectedItem.SetMatch}" 
-                        CommandParameter="{Binding ElementName=lbSimilarTextures, Path=SelectedItem}" />
-                <Button Content="Add to similar"/>
+                        CommandParameter="{Binding ElementName=lbSimilarTextures, Path=SelectedItem}"/>
+                <Button Content="Add to similar" Command="{Binding Pass}"/>
             </StackPanel>
             <TabControl>
                 <TabItem Header="Similar">
@@ -98,8 +103,9 @@
         </DockPanel>
 
         <DockPanel>
-            <Grid DockPanel.Dock="Bottom" Background="#bbb" Margin="2" Height="50">
-                <ListBox Name="lbTextures" Margin="5" Background="#bababa" 
+            <Grid DockPanel.Dock="Bottom" Margin="2" Height="50">
+                <ListBox Name="lbTextures" Margin="5"  
+                         SelectedItem="{Binding SelectedTexture}"
                          ItemsSource="{Binding Path=Model.TexturesOld}">
                     <ListBox.ItemsPanel>
                         <ItemsPanelTemplate>
@@ -121,10 +127,6 @@
             </Grid>
 
             <Grid>
-                <Grid.Background>
-                    <ImageBrush ImageSource="..\..\..\Images\checker.png" TileMode="Tile" 
-                                ViewportUnits="Absolute" Viewport="0,0,20,20" Opacity="0.2"/>
-                </Grid.Background>
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="*"/>
                     <ColumnDefinition Width="*"/>
@@ -136,7 +138,7 @@
                             <DropShadowEffect BlurRadius="60" Direction="-120" ShadowDepth="25" Opacity="0.6"/>
                         </Image.Effect>
                     </Image>
-                    <StackPanel VerticalAlignment="Bottom" HorizontalAlignment="Left" Margin="5" Background="#2fff">
+                    <StackPanel VerticalAlignment="Bottom" HorizontalAlignment="Left" Margin="5" >
                         <TextBlock Padding="0" Text="{Binding Path=SelectedSimilar.Resolution}"/>
                         <TextBlock Padding="0" Text="{Binding Path=SelectedSimilar.Name}"/>
                         <TextBlock Padding="0" Text="{Binding Path=SelectedSimilar.Path}"/>
@@ -151,7 +153,7 @@
                             <DropShadowEffect BlurRadius="60" Direction="-120" ShadowDepth="25" Opacity="0.6"/>
                         </Image.Effect>
                     </Image>
-                    <StackPanel VerticalAlignment="Bottom" HorizontalAlignment="Left" Margin="5" Background="#2fff">
+                    <StackPanel VerticalAlignment="Bottom" HorizontalAlignment="Left" Margin="5" >
                         <TextBlock Padding="0" Text="{Binding Path=SelectedTexture.Resolution}"/>
                         <TextBlock Padding="0" Text="{Binding Path=SelectedTexture.Name}"/>
                         <TextBlock Padding="0" Text="{Binding Path=SelectedTexture.Path}"/>
