--- a/ImageCompareMap/Styles/Panels.xaml
+++ b/ImageCompareMap/Styles/Panels.xaml
@@ -1,5 +1,20 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:local="clr-namespace:MapComparer.Styles">
-    
+
+    <!--<Style x:Name="BasePanel" TargetType="Panel">
+        <Setter Property="Margin" Value="5"/>
+        <Setter Property="Padding" Value="5"/>
+        <Setter Property="MinWidth" Value="75"/>
+        <Setter Property="MinHeight" Value="25"/>
+    </Style>-->
+
+    <Style  x:Name="BasePanel" TargetType="Grid">
+        <!--<Setter Property="Background" Value="LightGray"/>-->
+    </Style>
+
+    <Style TargetType="Canvas" BasedOn="BasePanel">
+        <!--<Setter Property="Background" Value="LightGray"/>-->
+    </Style>
+
 </ResourceDictionary>
