--- a/ImageCompareMap/Interface/ComparisonPage.xaml
+++ b/ImageCompareMap/Interface/ComparisonPage.xaml
@@ -1,27 +1,24 @@
 ﻿<Page x:Class="MapComparer.Interface.ComparisonPage"
-      xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-      xmlns:local="clr-namespace:MapComparer.Interface" mc:Ignorable="d" d:DesignHeight="450" d:DesignWidth="800" 
-      xmlns:viewmodel="clr-namespace:MapComparer.Viewmodel" Title="ComparisonPage" Background="LightGray"
+      xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" 
+      xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
+      xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+      xmlns:local="clr-namespace:MapComparer.Interface" 
+      xmlns:viewmodel="clr-namespace:MapComparer.Viewmodel" 
+      mc:Ignorable="d" d:DesignHeight="450" d:DesignWidth="800" Title="ComparisonPage" Background="LightGray"
       >
-    
-    <!-- Only for intelisense. Remove in release. -->
+    <!--удалить-->
     <Page.DataContext>
         <viewmodel:MainWindowViewModel/>
     </Page.DataContext>
-
+    
     <Page.InputBindings>
-        <KeyBinding Command="{Binding Test}"                Key="T" Modifiers="Ctrl"/>
-        <KeyBinding Command="{Binding ScanTextures}"        Key="S" Modifiers="Alt"/>
-        <KeyBinding Command="{Binding SelectNextImage}"      Key="D"
-                    CommandParameter="{Binding ElementName=lbTextures}"/>
-        <KeyBinding Command="{Binding SelectPrevImage}"      Key="A"
-                    CommandParameter="{Binding ElementName=lbTextures}"/>
-        
-        <KeyBinding Command="{Binding SelectPrevSimilarImage}"      Key="S"
-                    CommandParameter="{Binding ElementName=lbSimilarTextures}"/>
-        <KeyBinding Command="{Binding SelectNextSimilarImage}"      Key="W"
-                    CommandParameter="{Binding ElementName=lbSimilarTextures}"/>
+        <KeyBinding Command="{Binding Test}"                    Key="T" Modifiers="Ctrl"/>
+        <KeyBinding Command="{Binding ScanTextures}"            Key="S" Modifiers="Alt"/>
+        <KeyBinding Command="{Binding SelectNextImage}"         Key="D" CommandParameter="{Binding ElementName=lbTextures}"/>
+        <KeyBinding Command="{Binding SelectPrevImage}"         Key="A" CommandParameter="{Binding ElementName=lbTextures}"/>
+        <KeyBinding Command="{Binding SelectPrevSimilarImage}"  Key="S" CommandParameter="{Binding ElementName=lbSimilarTextures}"/>
+        <KeyBinding Command="{Binding SelectNextSimilarImage}"  Key="W" CommandParameter="{Binding ElementName=lbSimilarTextures}"/>
     </Page.InputBindings>
     
     <DockPanel>
@@ -46,7 +43,7 @@
             <Menu HorizontalAlignment="Left" >
                 <MenuItem Header="Options"/>
             </Menu>
-            <Label Name="lblStatus" Content="status" Padding="0" HorizontalAlignment="Center"/>
+            <TextBlock Name="lblStatus" Text="{Binding SelectedTexture.Name}" Padding="0" HorizontalAlignment="Center"/>
         </Grid>
 
         <DockPanel DockPanel.Dock="Right" MaxWidth="200">
@@ -60,9 +57,9 @@
                 <TabItem Header="Similar">
                     <DockPanel Margin="5">
                         <Grid DockPanel.Dock="Top">
-                            <TextBlock Text="{Binding ElementName=lbTextures, Path=SelectedItem.Similar.Count}" HorizontalAlignment="Right"/>
+                            <TextBlock Text="{Binding SelectedTexture.Similar.Count}" HorizontalAlignment="Right"/>
                         </Grid>
-                        <ListBox Name="lbSimilarTextures" ItemsSource="{Binding ElementName=lbTextures, Path=SelectedItem.Similar}">
+                        <ListBox Name="lbSimilarTextures" ItemsSource="{Binding SelectedTexture.Similar}">
                             <ListBox.ItemTemplate>
                                 <DataTemplate>
                                     <StackPanel Orientation="Horizontal">
@@ -82,7 +79,7 @@
                         <Grid DockPanel.Dock="Top">
                             <TextBlock Text="{Binding Path=Model.TexturesNew.Count}" HorizontalAlignment="Right"/>
                         </Grid>
-                        <ListBox ItemsSource="{Binding Path=Model.TexturesNew}">
+                        <ListBox ItemsSource="{Binding Path=NewTextures}">
                             
                             <ListBox.ItemTemplate>
                                 <DataTemplate>
@@ -106,7 +103,7 @@
             <Grid DockPanel.Dock="Bottom" Margin="2" Height="50">
                 <ListBox Name="lbTextures" Margin="5"  
                          SelectedItem="{Binding SelectedTexture}"
-                         ItemsSource="{Binding Path=Model.TexturesOld}">
+                         ItemsSource="{Binding Path=OldTextures}">
                     <ListBox.ItemsPanel>
                         <ItemsPanelTemplate>
                             <WrapPanel IsItemsHost="True" />
@@ -116,10 +113,10 @@
                         <DataTemplate>
                             <WrapPanel>
                                 <Image Height="30" Margin="2" Source="{Binding Path=Preview}"/>
-                                <StackPanel Orientation="Vertical">
-                                    <!--<TextBlock Margin="2" FontSize="10" Text="{Binding Path=Path}"/>
-                                    <TextBlock Margin="2" FontSize="12" Text="{Binding Path=Name}"/>-->
-                                </StackPanel>
+                                <!--<StackPanel Orientation="Vertical">
+                                    <TextBlock Margin="2" FontSize="10" Text="{Binding Path=Path}"/>
+                                    <TextBlock Margin="2" FontSize="12" Text="{Binding Path=Name}"/>
+                                </StackPanel>-->
                             </WrapPanel>
                         </DataTemplate>
                     </ListBox.ItemTemplate>
